list items and shop

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -306,7 +306,7 @@
                     </div>
                 </div>
             </div>
-            <div class="overview-area pt-135">
+            <div style="display: none" class="overview-area pt-135">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
@@ -335,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            <div class="banner-area pt-135 pb-120">
+            <div style="display: none" class="banner-area pt-135 pb-120">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-lg-4">
@@ -375,7 +375,7 @@
                         <a class="active" href="#home1" data-toggle="tab" >
                             <h4>NEW BIKES </h4>
                         </a>
-                        <a href="#home2" data-toggle="tab">
+                        <a style="display: none" href="#home2" data-toggle="tab">
                             <h4> USED BIKES </h4>
                         </a>
                     </div>
@@ -404,9 +404,12 @@
                                                    th:attr="prodid=${product.getId()}">
                                                     <i class=" ti-shopping-cart"></i>
                                                 </a>
-                                                <a class="action-cart-2" title="Wishlist" href="wishlist.html">
+
+                                                <!---->
+                                                <a style="display: none" class="action-cart-2" title="Wishlist" href="wishlist.html">
                                                     <i class=" ti-heart"></i>
                                                 </a>
+
                                                 <a class="action-reload" title="Quick View"
                                                    data-toggle="modal" data-target="#exampleModal" href="#">
                                                     <i class=" ti-zoom-in"></i>
@@ -424,7 +427,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product-wrapper">
+                                    <div style="display: none" class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
                                                 <img src="http://preview.freethemescloud.com/oswan/assets/img/product/product-4.jpg" alt="">
@@ -461,7 +464,7 @@
                                     </div>
                                 </div>
 <!--                                Test-->
-                                <div class="product-wrapper-bundle">
+                                <div style="display: none" class="product-wrapper-bundle">
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
@@ -533,7 +536,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="product-wrapper-bundle">
+                                <div style="display: none" class="product-wrapper-bundle">
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
@@ -605,7 +608,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="product-wrapper-bundle">
+                                <div style="display: none" class="product-wrapper-bundle">
                                     <div class="product-wrapper">
                                         <div class="product-img">
                                             <a href="product-details.html">
@@ -681,7 +684,7 @@
                             </div>
                         </div>
 
-                        <div class="tab-pane" id="home2">
+                        <div style="display: none" class="tab-pane" id="home2">
                             <div class="product-slider-active owl-carousel">
                                 <div class="product-wrapper-bundle">
                                     <div class="product-wrapper mb-30">
@@ -977,7 +980,9 @@
                     </div>
                 </div>
             </div>
-            <div class="latest-product-area pt-205 pb-145 bg-img" style="background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)">
+            <div class="latest-product-area pt-205 pb-145 bg-img"
+                 style="display: none;background-image: url(http://preview.freethemescloud.com/oswan/assets/img/banner/banner-4.jpg)"
+            >
                 <div class="container-fluid">
                     <div class="latest-product-slider owl-carousel">
                         <div class="single-latest-product slider-animated-2">
@@ -1027,7 +1032,7 @@
                     </div>
                 </div>
             </div>
-            <div class="accessories-area pt-152 pb-130">
+            <div style="display: none" class="accessories-area pt-152 pb-130">
                 <div class="container-fluid">
                     <div class="section-title section-fluid text-center mb-60">
                         <h2>ACCESSORIES</h2>
@@ -1231,7 +1236,7 @@
                     </div>
                 </div>
             </div>
-            <div class="testimonial-area">
+            <div style="display: none" class="testimonial-area">
                 <div class="container">
                     <div class="section-title-2 section-title-position">
                         <h2>OUR CLIENTS REVIEW</h2>
@@ -1280,7 +1285,7 @@
                     </div>
                 </div>
             </div>
-            <div class="blog-area pt-150 pb-110">
+            <div style="display: none" class="blog-area pt-150 pb-110">
                 <div class="container">
                     <div class="section-title text-center mb-60">
                         <h2>BLOG POST</h2>
@@ -1353,7 +1358,7 @@
                     </div>
                 </div>
             </div>
-            <div class="newsletter-area">
+            <div style="display: none" class="newsletter-area">
                 <div class="container">
                     <div class="newsletter-wrapper-all theme-bg-2">
                         <div class="row">
