--- a/src/main/resources/templates/login-register.html
+++ b/src/main/resources/templates/login-register.html
@@ -275,7 +275,8 @@
                                                             <label>Remember me</label>
                                                             <a href="#">Forgot Password?</a>
                                                         </div>
-                                                        <button class="btn-style cr-btn" id="btn-sign-in"><span>Login</span></button>
+                                                        <button class="btn-style cr-btn" id="btn-sign-in"
+                                                                style="cursor: pointer"><span>Login</span></button>
                                                     </div>
                                                 <!--</form>-->
                                             </div>
@@ -294,7 +295,8 @@
                                                     <input name="pwd_confirm" type="password"  id="register-password-confirmation"
                                                            placeholder="Nhập lại mật khẩu"/>
                                                     <div class="button-box">
-                                                        <button  class="btn-style cr-btn" id="btn-register"><span>Register</span></button>
+                                                        <button  class="btn-style cr-btn" id="btn-register"
+                                                                 style="cursor: pointer"><span>Register</span></button>
                                                     </div>
                                                 <!--</form>-->
                                             </div>
